--- a/vercel.json
+++ b/vercel.json
@@ -1,11 +1,5 @@
 {
-  "buildCommand": "pnpm build",
+  "buildCommand": "pnpm run build:web",
   "outputDirectory": "apps/web/.next",
-  "installCommand": "pnpm install",
-  "framework": "nextjs",
-  "functions": {
-    "apps/web/app/api/**/*.ts": {
-      "runtime": "nodejs18.x"
-    }
-  }
+  "installCommand": "pnpm install"
 } 
