--- a/package.json
+++ b/package.json
@@ -3,10 +3,13 @@
   "private": true,
   "scripts": {
     "build": "turbo run build",
+    "build:web": "turbo run build --filter=web",
     "dev": "turbo run dev",
     "lint": "turbo run lint",
     "format": "prettier --write \"**/*.{ts,tsx,md}\"",
-    "check-types": "turbo run check-types"
+    "check-types": "turbo run check-types",
+    "build:server": "turbo run build --filter=server",
+    "start:server": "cd apps/server && npm run start:prod"
   },
   "devDependencies": {
     "prettier": "^3.6.2",
