updated package json

--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
     "build": "turbo run build",
     "build:web": "turbo run build --filter=web",
     "build:server": "turbo run build --filter=server",
-    "build:render": "cd apps/server && npm install && npm run build",
+    "build:render": "npm install && cd apps/server && npm install && npm run build",
+    "build:render:pnpm": "pnpm install && pnpm run build:server",
     "dev": "turbo run dev",
     "lint": "turbo run lint",
     "format": "prettier --write \"**/*.{ts,tsx,md}\"",
