--- a/apps/server/package.json
+++ b/apps/server/package.json
@@ -49,7 +49,7 @@
     "@types/supertest": "^6.0.0",
     "@types/bcryptjs": "^2.4.6",
     "@types/passport-jwt": "^4.0.1",
-    "@types/passport-local": "^1.0.38",
+    "@types/passport-local": "^1.38",
     "@types/cookie-parser": "^1.4.6",
     "@typescript-eslint/eslint-plugin": "^8.0.0",
     "@typescript-eslint/parser": "^8.0.0",
@@ -64,7 +64,7 @@
     "ts-loader": "^9.4.3",
     "ts-node": "^10.9.1",
     "tsconfig-paths": "^4.2.0",
-    "typescript": "^5.1.3"
+    "typescript": "5.9.2"
   },
   "jest": {
     "moduleFileExtensions": [
