--- a/packages/types/package.json
+++ b/packages/types/package.json
@@ -15,6 +15,6 @@
   "devDependencies": {
     "@repo/typescript-config": "workspace:*",
     "@types/react": "^19",
-    "typescript": "^5"
+    "typescript": "5.9.2"
   }
 } 
