--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
     "build:server": "turbo run build --filter=server",
     "build:render": "npm install && cd apps/server && npm install && npm run build",
     "build:render:pnpm": "pnpm install && pnpm run build:server",
+    "build:vercel": "pnpm install && pnpm run build:web",
+    "build:all": "pnpm install && pnpm run build",
     "dev": "turbo run dev",
     "lint": "turbo run lint",
     "format": "prettier --write \"**/*.{ts,tsx,md}\"",
