--- a/package.json
+++ b/package.json
@@ -5,10 +5,11 @@
     "build": "turbo run build",
     "build:web": "turbo run build --filter=web",
     "build:server": "turbo run build --filter=server",
+    "build:types": "turbo run build --filter=@repo/types",
     "build:render": "npm install && cd apps/server && npm install && npm run build",
     "build:render:pnpm": "pnpm install && pnpm run build:server",
-    "build:vercel": "pnpm install && pnpm run build:web",
-    "build:all": "pnpm install && pnpm run build",
+    "build:vercel": "pnpm install && pnpm run build:types && pnpm run build:web",
+    "build:all": "pnpm install && pnpm run build:types && pnpm run build",
     "dev": "turbo run dev",
     "lint": "turbo run lint",
     "format": "prettier --write \"**/*.{ts,tsx,md}\"",
