--- a/package.json
+++ b/package.json
@@ -8,8 +8,9 @@
     "build:types": "turbo run build --filter=@repo/types",
     "build:render": "npm install && cd apps/server && npm install && npm run build",
     "build:render:pnpm": "pnpm install && pnpm run build:server",
-    "build:vercel": "pnpm install && pnpm run build:types && pnpm run build:web",
+    "build:vercel": "pnpm install --frozen-lockfile && pnpm run build:types && pnpm run build:web",
     "build:all": "pnpm install && pnpm run build:types && pnpm run build",
+    "postinstall": "pnpm run build:types",
     "dev": "turbo run dev",
     "lint": "turbo run lint",
     "format": "prettier --write \"**/*.{ts,tsx,md}\"",
