--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -50,7 +50,6 @@
     "eslint": "^9",
     "eslint-config-next": "15.5.0",
     "tailwindcss": "^4.1.12",
-    "tw-animate-css": "^1.3.7",
-    "typescript": "5.9.2"
+    "tw-animate-css": "^1.3.7"
   }
 }
